test_data/end_to_end/err__value_vs_type_namespace/stderr.txt
error: name `NAME` is defined multiple times
  --> main.cz:9:12
9 |     use m::NAME;
               ~~~~
